<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Timetable_Display" >

    <item android:id="@+id/calendar_today"
        android:title="@string/calendar_today"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        />

    <group android:checkableBehavior="single"
        android:src="@drawable/ic_settings">

        <item android:id="@+id/calendar_day_view"
            android:title="@string/calendar_day_view"
            android:orderInCategory="100"
            android:checked="true"/>
        <item android:id="@+id/calendar_three_day_view"
            android:title="@string/calendar_three_day_view"
            android:orderInCategory="100"
            />
        <item android:id="@+id/calendar_week_view"
            android:title="@string/calendar_week_view"
            android:orderInCategory="100"
            />
    </group>
</menu>