<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reset_password"
        android:id="@+id/ResetPasswordTextView"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterResetLinkET"
        android:layout_gravity="center_horizontal"
        android:hint="@string/reset_link"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterResetLinkButton"
        android:text="@string/enter_reset_link"
        android:onClick="resetPasswordLink"
        android:background="#42A5F5"
        android:textColor="#ffffff"
        android:textStyle="bold"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/passwordResetTV"
        android:text="@string/enter_password_below"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        android:textAlignment="center"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordResetET"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/retypePasswordResetET"
        android:hint="@string/confirm_password"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:id="@+id/resetPasswordButton"
        android:onClick="resetPassword"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="#43bb36"
        android:textColor="#ffffff"
        android:textStyle="bold"/>
</LinearLayout>